; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_message.c_verbose_enter_scroll.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_message.c_verbose_enter_scroll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@p_vfile = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8
@msg_silent = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@msg_scroll = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @verbose_enter_scroll() #0 {
  %1 = load i64*, i64** @p_vfile, align 8
  %2 = load i64, i64* %1, align 8
  %3 = load i64, i64* @NUL, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @msg_silent, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @msg_silent, align 4
  br label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @TRUE, align 4
  store i32 %9, i32* @msg_scroll, align 4
  br label %10

10:                                               ; preds = %8, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
